# Henky3D

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  MATERIALS_SHADOWS_IMPLEMENTATION.md  README.md  RENDERING_IMPLEMENTATION.md  build.bat  fetch_glad.sh
shaders/: Common.hlsli  DepthPrepass.ps.hlsl  DepthPrepass.vs.hlsl  Forward.ps.glsl  Forward.ps.hlsl  Forward.vs.hlsl  Shadow.ps.hlsl  Shadow.vs.hlsl
src/: CMakeLists.txt  main.cpp
src/engine/: CMakeLists.txt
src/engine/core/: Timer.h  Window.cpp  Window.h
src/engine/ecs/: Components.h  CullingSystem.cpp  CullingSystem.h  ECSWorld.h  TransformSystem.cpp  TransformSystem.h
src/engine/graphics/: AssetRegistry.cpp  AssetRegistry.h  ConstantBufferAllocator.cpp  ConstantBufferAllocator.h.d3d12  ConstantBuffers.h  FrameGraph.cpp  FrameGraph.cpp.d3d12  FrameGraph.h  GraphicsDevice.cpp  GraphicsDevice.cpp.d3d12  GraphicsDevice.h  Material.h  Renderer.cpp  Renderer.h  ShadowMap.cpp  ShadowMap.h
src/engine/input/: Input.cpp  Input.h
